fix historique mauvais bord